
2008-02-22  Ingmar Schlecht  <ingmar@typo3.org>

	* Added feature #7526: Making loginNews look nicer (Thanks to Steffen Kamper)
	* Added feature #4553: Enable negative timestamps, so the date/datetime fields now support dates starting from 1902 instead of 1970. This is possible on all platforms since PHP 5.1. (Thanks to Steffen Kamper)
	* Fixed bug #7158: DBAL fixes to Indexed Search backend module (Thanks to Moreno Feltscher)
	* Issue #7508: Slight improvement of BE user label in backend.php (Thanks to Steffen Kamper)

2008-02-21  Benjamin Mack  <mack@xnos.org>

	* Added feature "Extended BE Module "Web/Permissions" with AJAX possibilites (Thanks to Andreas Kundoch)

2008-02-21  Ingo Renner  <ingo@typo3.org>

	* !!! modified the interface for toolbarItems so that the reference to the backend Object in the constructor is optional, this was necessary to have AJAX response methods in the same class as the code that generates the toolbar item itself

2008-02-20  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7602: htmlArea RTE: Make the use of extended inline elements configurable
	* Fixed bug #7604: htmlArea RTE: add compatibility mode for indentation and alignment
	* Fixed bug #7582: RTE transformation should process dd element as block element
	* Fixed bug #7609: HTMLArea RTE: labels deleted from file locallang_tooltips.xml
	* Fixed bug #7609 (continued): HTMLArea RTE: labels deleted from files CharacterMap/locallang and InlineCSS/locallang

2008-02-19  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added feature #7393: ASCII wrapper functions for strtoupper and strtolower (patch by Steffen Kamper)
	* Use t3lib_div::strtoupper() for processing indexed search templates

2008-02-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #3491: Linking between domains in the pagetree ignores simulate static documents
	* Fixed bug #7425: syntax error in temp_CACHE*.php (patch by Steffen Kamper)
